# rust-hdl-bsp-step-mxo2-lpc

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: pins.rs  synth.rs
